--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<h1>Hello, World!</h1>
-
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-indigo.css">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset = "UTF-8">
+    <title>Hello World!</title>
+  </head> 
+  <body>
+     <p>Hello World!</p>
+  </body>
+</html>
