--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset = "UTF-8">
   </head> 
   <body>
-     <p title = "This is some website content!" style="color:red;">Hello World!</p>
+    <h2>Latest something</h2>
+    <p title = "This is some website content!" style="color:red;">Hello World!</p>
   </body>
 </html>
