--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset = "UTF-8">
   </head> 
   <body>
-    <h2>Latest something</h2>
-    <p title = "This is some website content!" style="color:red;">Hello World!</p>
+    <section>
+      <h2><>h2>
+      <><>
+    </section>
   </body>
 </html>
